Vinculo com a tela de registro

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
             </label>
         </div>
         <div>
-            <button class="entrar">Entrar</button>
+            <button class="entrar">Entrar
+                <a target="_blank" href="./resgistro.html"></a>
+            </button>
         </div>
-        <div class="registro">
-            Não possui uma conta? Registre-se
+        <div class="registre_se">
+            Não possui uma conta? <a href="./resgistro.html">Registre-se</a> 
         </div>
     </div>
     <footer>
